--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<title>Thames River Anglers Association</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 </head>
 <body>
 <div id="siteContainer">
@@ -38,7 +39,7 @@
 	<div class="extraSpace">
 		<div id="about">
 			<div class="title">
-				<h2>About The Thames River Anglers Association</h2>
+				<h2>ABOUT THE TRAA</h2>
 			</div>
 			<div id="about1">
 				<div id="aboutImageCon">
@@ -46,13 +47,13 @@
 					<img src="images/about2.png" alt="scenic river release">
 				</div>
 				<div id="about1TextCon">
-						<div id="subtitle"><p>The TRAA Works at a Grassroots Level Within the Thames River Watershed to</p></div>
-						<p>• Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
-						<p>• Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
-						<p>• Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
-						<p>• Promote environmentally sound sport fishing practices.</p>
-						<p>• Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
-						<p>• Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
+						<div id="subtitle"><h3>The Thames River Anglers Association Works at a Grassroots Level Within the Thames River Watershed to...</h3></div>
+						<p>Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
+						<p>Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
+						<p>Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
+						<p>Promote environmentally sound sport fishing practices.</p>
+						<p>Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
+						<p>Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
 				</div>
 			</div>
 		</div>
