--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 	<title>Thames River Anglers Association</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 </head>
 <body>
 <div id="siteContainer">
@@ -37,7 +38,7 @@
 		<div class="extraSpace">
 		<div id="contactCon">
 			<div class="title">
-				<h2>Contact The Thames River Anglers Association</h2>
+				<h2>CONTACT THE TRAA</h2>
 			</div>
 			<div id="contactTop">
 				<div id="contImageCon">
@@ -50,6 +51,10 @@
 						<div class="subtitle1"><p>OR</p></div>
 						<p>If you're an individual who would like to become involved with the activities undertaken by the Thames River Anglers Association...</p>
 						<p>the Thames River Anglers Association would like to hear from you.</p>
+
+					<div class="buttonCon">
+					<div class="button"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -96,9 +101,6 @@
 				London, Ontario
 				N6G 0B9 
 			</p>
-			<div class="buttonCon">
-					<div class="linkB button"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
-			</div>
 		</div>	
 	
 	</div>
@@ -109,7 +111,7 @@
 <div class="extraSpace">
 		<div id="memberCon">
 			<div class="title">
-				<h2>Thames River Anglers Association Memberships</h2>
+				<h2>TRAA MEMBERSHIPS</h2>
 			</div>
 			<div id="memberTop">
 				<div id="memImageCon">
@@ -117,7 +119,7 @@
 					<img src="images/cont2.png" alt="foggy lake">
 				</div>
 				<div id="memTextCon">
-						<div class="deal"><h3>This is the BEST membership deal you can buy!</h3></div>
+						<div class="subtitle"><h3>This is the BEST membership deal you can buy!</h3></div>
 						<p>Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says your a TRAA member and you'll get periodic updates on what you're missing out on.</p>
 						<div class="deal">Participate, Help Out, Have Fun and give a little bit back to the Thames River watershed!</div>
 						<p>Not only does $25.00 get you in good standing as a TRAA member, it also includes everyone in your immediate family!</p>
