--- a/more.html
+++ b/more.html
@@ -5,6 +5,7 @@
 	<title>Thames River Anglers Association</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 </head>
 <body>
 <div id="siteContainer">
@@ -181,272 +182,6 @@
 </div> 
 
 <div class="divider"></div>
-
-<div class="extraSpace">
-	<div id="links">
-		<div class="subtitle"><h2>Sites of Interest to the 'ConserFishinist'</h2></div>
-		<div class="links">
-		<div class="subtitle"><h3>Conservation</h3></div>
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="https://caroliniancanada.ca/">Carolinian Canada</a></div>
-				</div>
-				<div class="linkDesc">
-					<p> Carolinian Canada’s diverse network advances a strategic ‘Big Picture’ vision for healthy landscapes and a green future in Canada’s deep south.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://thamesrivercleanup.ca/default.htm">Thames River Cleanup</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>The Friends of the Thames has been organising and promoting the Annual Thames River Cleanup every spring for the past 14 years.Environmentally concerned volunteers, landowners, clubs, organizations and municipalities have come together during Earth week to help clean up portions of the Thames River watershed areas.Check out their Contacts page to find out who or what organization is cleaning up your favourite section of the Thames River.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.mcilwraith.ca/">Nature London</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>Nature London undertakes a variety of projects to promote environmental awareness, enhance habitat and protect natural areas. MFN members participate in the Christmas Bird Count, the annual Butterfly Count and other initiatives which encourage the study of local natural history.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><h4><a href="http://www.northshoresteelhead.com/">North Shore Steelhead Association</a></h4></div>
-				</div>
-				<div class="linkDesc">
-					<p>The primary concern of the founding members was the protection and enhancement of the north shore migratory Rainbow Trout (Steelhead) fishery, but their foresight led to the inclusion of all coldwater species in our constitution. This, by default, includes all species that use Lake Superior tributaries in their life cycle.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.ontariostreams.on.ca/">Ontario Streams</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>To promote the protection and rehabilitation of Ontario's rivers and streams through education and community action.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.ofah.org/">Ontario Federation of Anglers and Hunters</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>You may think you know who they are and what they do, but check the site, you may be surprised!</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.tucanada.org/">Trout Unlimited Canada</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>To conserve, protect and restore Canada's freshwater resources and their watersheds for current and future generations.</p>
-				</div>
-			</div>
-	
-		<div class="subtitle"><h3>Conservation Authority</h3></div>
-			
-			<div class="links2">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.abca.on.ca/">Ausable Bayfield</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.creditvalleycons.com/">Credit Valley</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.erca.org/">Essex Region</a></div>
-				</div>	
-			</div>
-			<div class="links2">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.grandriver.ca/">Grand River</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.conservationhalton.ca/">Halton Region</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.conservationhamilton.ca/">Hamilton Region</a></div>
-				</div>	
-			</div>
-			<div class="links2">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.lprca.on.ca/">Long Point Region</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.lakeheadca.com/">Lakehead Region</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.lowerthames-conservation.on.ca/">Lower Thames Valley</a></div>
-				</div>	
-			</div>
-			<div class="links2">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.trca.on.ca/">Metro Toronto & Region</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.rvca.ca/">Rideau Valley</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.scrca.on.ca/">St. Clair Region</a></div>
-				</div>	
-			</div>
-			<div class="links2">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.thamesriver.on.ca/">Upper Thames River</a></div>
-				</div>	
-			</div>
-
-			<div class="subtitle"><h3>Governmental Entities</h3></div>
-
-			<div class="links3">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.mnr.gov.on.ca/en/index.html">Ontario Ministry of Natural Resources</a></div>
-				</div>	
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.ene.gov.on.ca/environment/en/index.html">Ontario Ministry of The Environment</a></div>
-				</div>	
-			</div>
-			
-
-			<div class="subtitle"><h3>Support These Local Fishing and Related Retailers</h3></div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://anglingsports.ca/index.html">Angling Sports</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>681 Highbury Ave N, London, ON N5W 4L4 (519-649-7429)</p>
-				</div>
-			</div>
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="#">Lambeth Rod & Tackle</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>2404 Main Street, London, ON N6P 1R2 (519-652-5598)</p>
-				</div>
-			</div>
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.freewebs.com/johnsflymaterials/">John's Fly Materials</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>96 Rectory Street, London, ON N5Z 1Z9 (226-270-9029)</p>
-				</div>
-			</div>
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="https://www.facebook.com/AnglingOutfitters/">Angling Outfitters</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>684460 Road 68, Woodstock, ON N4S 7V7 (519-539-5494)</p>
-				</div>
-			</div>
-
-		<div class="subtitle"><h3>Fishing and Related Links </h3></div>
-		
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www3.sympatico.ca/ianjames/">Ian Colin James</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>This late great great friend of the Thames River and the Thames River Anglers Association was a Fly Fisherman, Tyer, Guide, Instructor, Author, College Prof', Artist, Raconteur, and Man About Town.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.wofgpa.org/">Western Ontario Fish & Game Protective Association</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>Quite likely the oldest and still one of the most viable conservation clubs in the London area. It's also where the TRAA holds their meetings.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.fcfc.ca/index.html">Forest City Fly Fishing Club</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>Learn everything about all things fly fishing. Also great friends and supporters of the TRAA.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://forestcitybassmasters.com/">Forest City Bassmasters</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>Activities include hosting fishing tournaments, guest speakers and events, and conservation activities with a focus on fun, friendship, learning and friendly competition.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="https://wateroffice.ec.gc.ca/google_map/google_map_e.html">Real-Time Hydrometric Data</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>Explore real-time river levels and flows (discharges) before you plan your fishing or canoe/kayak trip.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://www.matchanglingclub.com/">Match Angling Club of Ontario</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>An interesting site with lots of info' on match angling, a growing aspect of our sport in North America.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="https://sffcl.com/">SOTTO Fly Fishing Club</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>This club organizes a series of fun fly fishing competitions across Ontario, one of which is the Thames River Open.</p>
-				</div>
-			</div>
-
-			<div class="links1">
-				<div class="buttonCon">
-					<div class="linkB button"><a href="http://thamesriverpaddlingroutes.webs.com/">Thames River Paddling Routes</a></div>
-				</div>
-				<div class="linkDesc">
-					<p>The aim of this website is to create a single source for accessing information for paddling the Thames River.</p>
-				</div>
-			</div>
-			
-			<div class="subtitle"><h3>Disclaimer</h3></div>
-			<div id="disclaimer">
-				<p>The links appearing on this page have been included for the interest of TRAA members and other like-minded individuals. We do our best to monitor what these sites offer as content. If you are concerned with any aspect of any of the linked sites, please contact the <a href="#">Webmaster</a>. Sites linked to this page that are deemed unsuitable for any reason at the sole discretion of the TRAA, will be removed without notice or explanation. Like-minded organizations wishing to have their sites linked to this page may contact the Webmaster. Your site's suitability for linking to this page is a decision made solely and strictly by the TRAA.</p>
-			</div>
-
-		</div>
-	</div>
-</div>
-
-	<div class="divider"></div>
-
-		<div class="extraSpace">
-		<div id="memberships">
-			<div id="membershipText"><h2>MEMBERSHIPS
-			ARE DUE! </h2>
-			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
-			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
-			<div class="MbuttonCon">
-				<div class="linkB button"><a href="contact.html">Become a Member!</a></div>
-			</div>
-		</div>
-	</div>
-
-	<div class="divider"></div>
 
 	<div id="fundraiser">
 		<div id="fundraiserBlurb">
