--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Thames River Anglers Association</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 </head>
 <body>
 <div id="siteContainer">
