--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
 	<title>Thames River Anglers Association</title>
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
 </head>
 <body>
 <div id="siteContainer">
@@ -55,8 +56,8 @@
 					<img src="images/proj2.png" alt="trout close up">
 					</div>
 					<div class="projBottom2"><h3>Salmonid Monitoring Program</h3>
-					<p> Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program </p>
-					<a href="projTem.html">...Read More</a>
+					<p> Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program...</p>
+					<a href="projTem.html" class="projButton">Read More</a>
 					</div>
 				</div>
 
@@ -66,42 +67,24 @@
 					</div>
 					<div class="projBottom2"><h3>TRAA Trout Hatchery</h3>	
 					<p> Rearing both brown and rainbow trout.
-					The TRAA first began rearing rainbow trout in an outdoor upwelling incubation box back in 1986. Since then we've successfully taken on both brown trout and brook trout eggs</p>
-					<a href="projTem.html">...Read More</a>
+					The TRAA first began rearing rainbow trout in an outdoor upwelling incubation box back in 1986. Since then we've successfully taken on both brown trout and brook trout eggs...</p>
+					<a href="projTem.html" class="projButton">Read More</a>
 					</div>
 				</div>
 
 		<div class="subtitle"><h2>Project Archives</h2></div>		
 			<div id="projectArchives">
 				<div class="buttonCon">
-					<div class="linkB button"><a href="projTem.html">Walleye Hatchery</a></div>
+					<div class="projButton"><a href="projTem.html">Walleye Hatchery</a></div>
 				</div>
 				<div class="buttonCon">
-					<div class="linkB button"><a href="projTem.html">Stream Rehabilitation</a></div>
+					<div class="projButton"><a href="projTem.html">Stream Rehabilitation</a></div>
 				</div>
 			</div>
 		</div>
 	</div>
 				
 <div class="divider"></div>
-
-<div class="extraSpace">
-	<div id="dataCon">
-		<div id="dataBlurb">
-			<div class="title">
-				<h2>Data Visuals</h2>
-			</div>
-		
-			<div id="dataImgs">
-				<div class="dataImg"><img src="images/dataviz1.png" alt="graph"></div>
-				<div class="dataImg"><img src="images/dataviz2.png" alt="graph"></div>
-				<div class="dataImg"><img src="images/dataviz3.png" alt="graph"></div>
-			</div>
-			
-		</div>
-	</div>
-</div>
-
 
 	<div class="divider"></div>
 
@@ -112,7 +95,7 @@
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
 			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
 			<div class="MbuttonCon">
-				<div class="linkB button"><a href="contact.html">Become a Member!</a></div>
+				<div class="button"><a href="contact.html">Become a Member!</a></div>
 			</div>
 		</div>
 	</div>
