--- a/about.html
+++ b/about.html
@@ -98,9 +98,9 @@
 				<h2>FUNDRAISING</h2>
 		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
-				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
-				<div class="fundraiserImg"><img src="images/fund3.png" alt="Komoka Hydrological"></div>
+				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
+				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
+				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
 				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
 				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
