revising some content, working on mobile

--- a/more.html
+++ b/more.html
@@ -10,30 +10,31 @@
 <body>
 <div id="siteContainer">
 	<h1 class="hidden">Thames River Anglers Association</h1>
-	<div id="mainNav">
+<header id="mainHeader">
+	<nav id="mainNav">
+		<h2 class="hidden">Main Navigation</h2>
+		<button id="burger"></button>
+		
 		<div id="logoContainer">
 		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
-		<nav>
-			<h2 class="hidden">Main Navigation</h2>
-			<ul>
+
+		<div id="burgerCon">
+			<ul id="burgerMenu">
 				<li><a href="index.html">Home</a></li>
-				<li>•</li>
 				<li><a href="about.html">About Us</a></li>
-				<li>•</li>
 				<li><a href="events.html">Past Events</a></li>
-				<li>•</li>
 				<li><a href="projects.html">Projects</a></li>
-				<li>•</li>
 				<li><a href="contact.html">Contact Us</a></li>
-				<li>•</li>
 				<li><a href="more.html">More</a></li>
-				<li>•</li>
-				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li id="Sbutton"><a href="#">Search</a></li>
 			</ul>
-		</nav>
-	</div>
+				<form id="search">
+					<input type="search" placeholder="Search...">
+					<input type="submit" name="search">
+				</form>
+		</div>
+	</header>
+</nav>
 	
 	<div class="extraSpace">
 		<div id="newsCon">
@@ -206,17 +207,11 @@
 		<div id="footerNav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li>•</li>
 				<li><a href="about.html">About Us</a></li>
-				<li>•</li>
 				<li><a href="events.html">Past Events</a></li>
-				<li>•</li>
 				<li><a href="projects.html">Projects</a></li>
-				<li>•</li>
 				<li><a href="contact.html">Contact Us</a></li>
-				<li>•</li>
 				<li><a href="more.html">More</a></li>
-				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
 				<li><button class="sbutton">Search</button></li>
