--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 		<div class="divider"></div>
 
 		<div class="extraSpace">
-			<div id="membershipText"><h2>MEMBERSHIPS
+			<div id="membershipText"><h2 class="title">MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
 			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
 			<div class="MbuttonCon">
-				<div class="linkB button"><a href="contact.html">Become a Member!</a></div>
+				<div class="button"><a href="contact.html">Become a Member!</a></div>
 			</div>
 		</div>
 
@@ -65,31 +65,33 @@
 	<div id="fundraiser">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
-		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
+		<h3 id="fundraiserText">Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
 				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
 				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
 			</div>
-			<div id="fundraiserText">
-			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+			<div id="fundraiserText"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
 
 	<div class="divider"></div>
 	
-	<div class="extraSpace">
+
 			<div id="announcements">
 				<div class="title">
-					<h2>ANNOUNCEMENTS:</h2>
+					<h2>ANNOUNCEMENTS</h2>
 				</div>
 			 <div class="announcements">
-				<div class="announcementImg"><img src="images/ann1.png" alt="fishing"></div>
+				<div class="announcementImg"><img src="images/ann1.png" alt="fishing" class="web">
+				<img src="images/ann1mob.png" alt="fishing" class="mobileImg">
+				</div>
+				<div class="subtitle">
+					<h2>TRAA General Meeting 7:00PM - Wednesday, January 9, 2019</h2>
+				</div>
 				<div class="announcement">
-					<h2>TRAA General Meeting
-						<br>7:00PM - Wednesday, January 9, 2019</h2>
 					<p>Happy New Year!
 					As part of the new you for 2019 why not start coming out to TRAA General Meetings. That way you're up on the latest details on TRAA news, plans and events.
 					Also note that with the New Year, it is time to renew your TRAA membership if you haven't already!
@@ -99,10 +101,12 @@
 			</div>
 
 				<div class="announcements">
-				<div class="announcementImg"><img src="images/ann2.png" alt="fishing"></div>
+				<div class="announcementImg"><img src="images/ann2.png" alt="fishing" class="web">
+				<img src="images/ann2mob.png" alt="fishing" class="mobileImg"></div>
+				<div class="subtitle">
+					<h2>TRAA Trout Hatchery: Brown Trout Eggs Arriving Soon!</h2>
+				</div>
 				<div class="announcement">
-					<h2>TRAA Trout Hatchery
-						<br>Brown Trout Eggs Arriving Soon!</h2>
 					<p>The TRAA trout hatchery is a popular activity of the TRAA as it's a great teaching tool with regard to the life cycle of a trout.</p>
 					<p>Those involved with the hatchery get to see firsthand the development stages of the egg and the fry before their final release destinations to area streams.
 					Volunteers attend to the operation every day to maintain the health and well-being of the trout. As the saying goes, many hands make light work.</p>
@@ -111,11 +115,14 @@
 				</div>
 			</div>
 				<div class="announcements">
-				<div class="announcementImg"><img src="images/ann3.png" alt="rod building"></div>
-				<div class="announcement">
+				<div class="announcementImg"><img src="images/ann3.png" alt="rod building" class="web">
+				<img src="images/ann3mob.png" alt="fishing" class="mobileImg"></div>
+				<div class="subtitle">
 					<h2>Rod Building - Your First Time
 					<br>7:00PM - Mondays, February 18 through March 11, 2019</h2>
-					<p>TThis will be a series of informal, hands-on sessions that will result in a spinning or fly rod that you have assembled and finished yourself.</p>
+				</div>
+				<div class="announcement">
+					<p>This will be a series of informal, hands-on sessions that will result in a spinning or fly rod that you have assembled and finished yourself.</p>
 					<p>This opportunity is open only to current members of the TRAA, WOFGPA and/or FCFFC.</p>
 					<p>Registration will be closed when 15 paid-up participants have registered, or January 11, 2019, whichever comes first.</p>
 					<p>An email with further details has been sent out. If you haven't received this email by Wednesday, December 19th, please Contact Us. </p>
@@ -124,20 +131,27 @@
 				</div>
 			</div>
 		<div class="announcements">
-				<div class="announcementImg"><img src="images/ann4.png" alt="cleanup"></div>
-				<div class="announcement">
+				<div class="announcementImg"><img src="images/ann4.png" alt="cleanup" class="web">
+				<img src="images/ann4mob.png" alt="fishing" class="mobileImg"></div>
+				<div class="subtitle">
 					<h2>Stream Habitat Work Party
 					<br>Took place on Saturday, October 13, 2018</h2>
+				</div>
+				<div class="announcement">
 					<p>A few TRAA members cleared a number of fallen trees and other blockages on October 13th.
 					Dan Shinkelshoek made a video of the proceedings and it's worth a look so click on the picture to view.
 					If you have further questions about TRAA stream habitat projects and events, please come out to the TRAA General Meeting on Wednesday, November 14th or Contact Us.</p>
 				</div>
 			</div>
 		<div class="announcements">
-				<div class="announcementImg"><img src="images/ann5.png" alt="Merch"></div>
-				<div class="announcement">
+				<div class="announcementImg"><img src="images/ann5.png" alt="Merch" class="web">
+				<img src="images/ann5mob.png" alt="fishing" class="mobileImg">
+				</div>
+				<div class="subtitle">
 					<h2>TRAA Gear is now available!
 					<br>Tee shirts, hats and stickers.</h2>
+				</div>
+				<div class="announcement">
 					<p>Many of you have already ordered the TRAA tee shirts, but if you haven't you had better hurry because many sizes are almost sold out! These are a steal at $15 each.</p>
 
 					<p>There are three different hat colours available: Clay Grey, Burnt Orange and Taupe. If you thought the tee's were a good deal, all three editions of these hats are also priced at $15 each.</p>
@@ -148,7 +162,6 @@
 				</div>
 			</div>
 		</div> 
-	</div>
 
 	<div class="divider"></div>
 
@@ -158,7 +171,7 @@
 				<h2>LOCAL BUSINESSES STEP UP TO HELP OUT THE TRAA</h2>
 			</div>
 
-			<div class="subtitle"><h3>The support of the following area business people is much appreciated</h3></div>
+			<div class="businessText"><h3>The support of the following area business people is much appreciated</h3></div>
 
 			<div class="businesses">
 				<div class="businessesImg"><img src="images/bus1.png" alt="Melchers logo"></div>
@@ -202,12 +215,12 @@
 	<div class="divider"></div>
 
 <div class="extraSpace">
-	<div class="comittee">
+	<div class="committee">
 		<div class="title">
-			<h2>TRAA EXECUTIVES</h2>
+			<h2 class="title">TRAA EXECUTIVES</h2>
 		</div>
 		
-		<div class="comittees">
+		<div class="committees">
 			<div class="members">
 			<div class="member"><H2>President</H2><p>Rob Huber</p></div>
 			<div class="member"><H2>Vice President</H2><p>Paul Holmes</p></div>
@@ -221,12 +234,11 @@
 	<div class="divider"></div>
 
 <div class="extraSpace">
-	<div class="comittee">
-		<div class="title">
-			<h2>TRAA VOLUNTEER COMMITTEE CHAIRS</h2>
-		</div>
+	<div class="committee">
 
-		<div class="comittees">
+			<h2 class="title">TRAA VOLUNTEER COMMITTEE CHAIRS</h2>
+
+		<div class="committees">
 			<div class="members">
 			<div class="member">
 				<H2>Trout</H2>
@@ -260,7 +272,6 @@
 
 
 	<div id="footer">
-
 		<div id="footerNav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -273,6 +284,10 @@
 				<li><form><input type="search" placeholder="Search..."></form></li>
 				<li><button class="sbutton">Search</button></li>
 				</ul>
+		</div>
+
+		<div id="mobileFoot">
+			<button>Return to Top</button>
 		</div>
 	</div>
 
