--- a/Events.html
+++ b/Events.html
@@ -136,22 +136,19 @@
 	<div class="divider"></div>
 
 	<div id="fundraiser">
-		<div id="fundraiserBlurb">
 			<div class="title">
-					<h2>FUNDRAISING</h2>
-		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
+				<h2>FUNDRAISING</h2>
+		<h3 id="fundraiserText">Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
-				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
-				<div class="fundraiserImg"><img src="images/fund3.png" alt="Komoka Hydrological"></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
 				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
 				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
 			</div>
-			<div id="fundraiserText">
-			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+			<div id="fundraiserText"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
-	</div>
 	
 	<div id="footer">
 		<div id="footerNav">
