--- a/about.html
+++ b/about.html
@@ -44,8 +44,10 @@
 			</div>
 			<div id="about1">
 				<div id="aboutImageCon">
-					<img src="images/about1.png" alt="river clean-up">
-					<img src="images/about2.png" alt="scenic river release">
+					<img src="images/about1.png" alt="river clean-up" class="web">
+					<img src="images/about1mob.png" alt="river clean-up" class="mobileImg">
+					<img src="images/about2.png" alt="scenic river release" class="web">
+					<img src="images/about2mob.png" alt="scenic river release" class="mobileImg">
 				</div>
 				<div id="about1TextCon">
 						<div id="subtitle"><h3>The Thames River Anglers Association Works at a Grassroots Level Within the Thames River Watershed to...</h3></div>
@@ -71,8 +73,10 @@
 			<p>The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
 		</div>	
 		<div id="about2ImageCon">
-			<img src="images/about3.png" alt="young fish">
-			<img src="images/about4.png" alt="stream close-up">
+			<img src="images/about3.png" alt="young fish" class="web">
+			<img src="images/about3mob.png" alt="young fish" class="mobileImg">
+			<img src="images/about4.png" alt="stream close-up" class="web">
+			<img src="images/about4mob.png" alt="stream close-up" class="mobileImg">
 		</div>
 	</div>
 </div>
@@ -93,23 +97,19 @@
 
 	<div class="divider"></div>
 
-	<div id="fundraiser">
-		<div id="fundraiserBlurb">
+		<div id="fundraiser">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
-		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
+		<h3 id="fundraiserText">Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
 				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
 				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
 			</div>
-			<div id="fundraiserText">
-			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
-		</div>
-		</div>
+			<div id="fundraiserText"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
 	
 	<div id="footer">
