--- a/index.html
+++ b/index.html
@@ -63,18 +63,17 @@
 	<div class="divider"></div>
 
 	<div id="fundraiser">
-			<div class="title">
-				<h2>FUNDRAISING</h2>
-		<h3 id="fundraiserText">Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
+				<h2 class="funTitle">FUNDRAISING</h2>
+		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
 				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
 				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
-				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
-				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
-				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
 			</div>
-			<div id="fundraiserText"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
+				<p>Continuation of the Salmonid Monitoring Program</p>
+				<p>Funding the Komoka Creek Hydrological Study</p></div>
+			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
 
 	<div class="divider"></div>
@@ -270,6 +269,8 @@
 	</div>
 </div>
 
+
+	<div class="divider"></div>
 
 	<div id="footer">
 		<div id="footerNav">
