--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,8 @@
 			<p>This is what sets the Thames River Anglers Association apart from other clubs and organizations. You'll find us right in the water clearing obstructions from streams, measuring returning salmonids & taking scale samples for DNA analysis, education through trout hatchery tours & stream walks, being a voice for the Thames River watershed & its inhabitants, and the list goes on.
 			</p>
 		</div>
-		<div id="projectsImageCon"><img src="images/proj1.png" alt="man with measuring instrument" ></div>
+		<div id="projectsImageCon"><img src="images/proj1.png" alt="man with measuring instrument" class="web">
+			<img src="images/proj1mob.png" alt="man with measuring instrument" class="mobileImg"></div>
 	</div>
 </div>	
 		<div class="divider"></div>
@@ -85,14 +86,11 @@
 			</div>
 		</div>
 	</div>
-				
-<div class="divider"></div>
 
 	<div class="divider"></div>
 
 		<div class="extraSpace">
-		<div id="memberships">
-			<div id="membershipText"><h2>MEMBERSHIPS
+			<div id="membershipText"><h2 class="title">MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
 			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
@@ -100,26 +98,29 @@
 				<div class="button"><a href="contact.html">Become a Member!</a></div>
 			</div>
 		</div>
-	</div>
 
 	<div class="divider"></div>
+
 
 	<div id="fundraiser">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
-		<h3 id="fundraiserText">Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
+			</div>
+		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
 				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
 				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
-				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
-				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
-				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
 			</div>
-			<div id="fundraiserText"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
+				<p>Continuation of the Salmonid Monitoring Program</p>
+				<p>Funding the Komoka Creek Hydrological Study</p></div>
+			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
 	
-	<div id="footer">
+	<div class="divider"></div>
+
+		<div id="footer">
 		<div id="footerNav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -132,6 +133,10 @@
 				<li><form><input type="search" placeholder="Search..."></form></li>
 				<li><button class="sbutton">Search</button></li>
 				</ul>
+		</div>
+
+		<div id="mobileFoot">
+			<button>Return to Top</button>
 		</div>
 	</div>
 
