finished mobile responsiveness... onto tablet..

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <div id="siteContainer">
@@ -45,10 +46,14 @@
 			<p>This is what sets the Thames River Anglers Association apart from other clubs and organizations. You'll find us right in the water clearing obstructions from streams, measuring returning salmonids & taking scale samples for DNA analysis, education through trout hatchery tours & stream walks, being a voice for the Thames River watershed & its inhabitants, and the list goes on.
 			</p>
 		</div>
-		<div id="projectsImageCon"><img src="images/proj1.png" alt="man with measuring instrument" class="web">
-			<img src="images/proj1mob.png" alt="man with measuring instrument" class="mobileImg"></div>
+		<div id="projectImage">
+			<img src="images/proj1.png" alt="man with measuring instrument" class="web">
+			<img src="images/proj1mob.png" alt="man with measuring instrument" class="mobileImg">
+			<img src="images/proj1tab.png" alt="man with measuring instrument" class="tabImg">
+		</div>
 	</div>
-</div>	
+</div>
+
 		<div class="divider"></div>
 
 	<div class="extraSpace">
@@ -56,26 +61,28 @@
 			<div class="title"><h2>Current & Past TRAA Projects</h2></div>
 				<div class="projBottom">
 					<div class="projImgs">
-					<img src="images/proj2.png" alt="trout close up">
+					<img src="images/proj2.png" alt="trout close up" class="web">
+					<img src="images/proj2tab.png" alt="trout close up" class="mobileImg">
 					</div>
 					<div class="projBottom2"><h3>Salmonid Monitoring Program</h3>
 					<p> Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program...</p>
-					<a href="projTem.html" class="projButton">Read More</a>
+					<a href="projTem.html" class="projButton buttonCon">Read More</a>
 					</div>
 				</div>
 
 				<div class="projBottom">
 					<div class="projImgs">
-					<img src="images/proj3.png" alt="hatchery building">
+					<img src="images/proj3.png" alt="hatchery building" class="web">
+					<img src="images/proj3tab.png" alt="hatchery building" class="mobileImg">
 					</div>
 					<div class="projBottom2"><h3>TRAA Trout Hatchery</h3>	
 					<p> Rearing both brown and rainbow trout.
 					The TRAA first began rearing rainbow trout in an outdoor upwelling incubation box back in 1986. Since then we've successfully taken on both brown trout and brook trout eggs...</p>
-					<a href="projTem.html" class="projButton">Read More</a>
+					<a href="projTem.html" class="projButton buttonCon">Read More</a>
 					</div>
 				</div>
 
-		<div class="subtitle"><h2>Project Archives</h2></div>		
+		<div class="subtitle psub"><h2>Project Archives</h2></div>		
 			<div id="projectArchives">
 				<div class="buttonCon">
 					<div class="projButton"><a href="projTem.html">Walleye Hatchery</a></div>
@@ -102,21 +109,23 @@
 	<div class="divider"></div>
 
 
-	<div id="fundraiser">
-			<div class="title">
-				<h2>FUNDRAISING</h2>
-			</div>
+<div id="fundraiser">
+				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+
 	
 	<div class="divider"></div>
 
@@ -136,7 +145,7 @@
 		</div>
 
 		<div id="mobileFoot">
-			<button>Return to Top</button>
+			<button id="return">Return to Top</button>
 		</div>
 	</div>
 
