--- a/Events.html
+++ b/Events.html
@@ -6,10 +6,14 @@
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <div id="siteContainer">
+
 	<h1 class="hidden">Thames River Anglers Association</h1>
+
+
 <header id="mainHeader">
 	<nav id="mainNav">
 		<h2 class="hidden">Main Navigation</h2>
@@ -133,11 +137,7 @@
 					<a href="#" class="eventButtons evButton20">See More</a>
 				</div>
 			</div>
-		</div>
-	</div>
-
-
-	
+		</div>	
 
 	<div class="divider"></div>
 
@@ -154,21 +154,23 @@
 	<div class="divider"></div>
 
 	
-	<div id="fundraiser">
-			<div class="title">
-				<h2>FUNDRAISING</h2>
-			</div>
+<div id="fundraiser">
+				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+
 		
 	<div class="divider"></div>
 	
@@ -188,7 +190,7 @@
 		</div>
 
 		<div id="mobileFoot">
-			<button>Return to Top</button>
+			<button id="return">Return to Top</button>
 		</div>
 	</div>
 
