--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <div id="siteContainer">
@@ -43,11 +44,10 @@
 				<h2>ABOUT THE TRAA</h2>
 			</div>
 			<div id="about1">
-				<div id="aboutImageCon">
+				<div class="aboutImageCon">
 					<img src="images/about1.png" alt="river clean-up" class="web">
 					<img src="images/about1mob.png" alt="river clean-up" class="mobileImg">
 					<img src="images/about2.png" alt="scenic river release" class="web">
-					<img src="images/about2mob.png" alt="scenic river release" class="mobileImg">
 				</div>
 				<div id="about1TextCon">
 						<div id="subtitle"><h3>The Thames River Anglers Association Works at a Grassroots Level Within the Thames River Watershed to...</h3></div>
@@ -58,6 +58,9 @@
 						<p>Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
 						<p>Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
 				</div>
+				<div class="aboutImageCon">
+					<img src="images/about2mob.png" alt="scenic river release" class="mobileImg">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -66,15 +69,17 @@
 		
 <div class="extraSpace">
 	<div id="about2">
+		<div class="about2ImageCon">
+				<img src="images/about3mob.png" alt="young fish" class="mobileImg">
+		</div>
 		<div id="about2TextCon">
 			<p>In the spring of 1986 the TRAA was formed by anglers concerned with the state of the fishery in the Thames River watershed, particularly the dwindling smallmouth bass population in the North Thames River.</p>
 			<p>The TRAA is not a fishing club, although most members are anglers and share fishing as a common interest. We are a "hands on" environmental group who likes to work at a grass roots level.</p>
 			<p>The TRAA is a volunteer organization, governed by a formal constitution and by-laws. An elected Executive, with the guidence of the General Membership, sets the policies and direction for the TRAA.</p>
 			<p>The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
 		</div>	
-		<div id="about2ImageCon">
+		<div class="about2ImageCon">
 			<img src="images/about3.png" alt="young fish" class="web">
-			<img src="images/about3mob.png" alt="young fish" class="mobileImg">
 			<img src="images/about4.png" alt="stream close-up" class="web">
 			<img src="images/about4mob.png" alt="stream close-up" class="mobileImg">
 		</div>
@@ -96,21 +101,23 @@
 	<div class="divider"></div>
 
 
-	<div id="fundraiser">
-			<div class="title">
-				<h2>FUNDRAISING</h2>
-			</div>
+<div id="fundraiser">
+				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+
 
 	<div class="divider"></div>
 
@@ -130,7 +137,7 @@
 		</div>
 
 		<div id="mobileFoot">
-			<button>Return to Top</button>
+			<button id="return">Return to Top</button>
 		</div>
 	</div>
 
