--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <div id="siteContainer">
@@ -42,9 +43,10 @@
 				<h2>CONTACT THE TRAA</h2>
 			</div>
 			<div id="contactTop">
-				<div id="contImageCon">
-					<img src="images/cont1.png" alt="traa members">
-					<img src="images/cont2.png" alt="foggy lake">
+				<div class="contImageCon">
+					<img src="images/cont1.png" alt="traa members" class="web">
+					<img src="images/cont1mob.png" alt="traa members" class="mobileImg">
+					<img src="images/cont2.png" alt="foggy lake" class="web">
 				</div>
 				<div id="cont1TextCon">
 						<div class="subtitle1"><p>There are a bunch of ways to get in touch with the TRAA</p></div>
@@ -53,10 +55,13 @@
 						<p>If you're an individual who would like to become involved with the activities undertaken by the Thames River Anglers Association...</p>
 						<p>the Thames River Anglers Association would like to hear from you.</p>
 
-					<div class="buttonCon">
-					<div class="button"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
-			</div>
-			</div>
+					<div class="FbuttonCon">
+					<div class="Fbutton"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
+					</div>
+				</div>
+				<div class="contImageCon">
+					<img src="images/cont2mob.png" alt="foggy lake" class="mobileImg">
+				</div>
 		</div>
 	</div>
 </div> 
@@ -116,38 +121,40 @@
 			</div>
 			<div id="memberTop">
 				<div id="memImageCon">
-					<img src="images/cont1.png" alt="traa members">
-					<img src="images/cont2.png" alt="foggy lake">
+					<img src="images/cont1.png" alt="traa members" class="web">
+					<img src="images/cont1mob.png" alt="traa members" class="mobileImg">
+					<img src="images/cont2.png" alt="foggy lake"  class="web">
 				</div>
 				<div id="memTextCon">
-						<div class="subtitle"><h3>This is the BEST membership deal you can buy!</h3></div>
+						<div class="subtitle memsub"><h3>This is the BEST membership deal you can buy!</h3></div>
 						<p>Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says your a TRAA member and you'll get periodic updates on what you're missing out on.</p>
-						<div class="deal">Participate, Help Out, Have Fun and give a little bit back to the Thames River watershed!</div>
+						<div class="deal memsub">Participate, Help Out, Have Fun and give a little bit back to the Thames River watershed!</div>
 						<p>Not only does $25.00 get you in good standing as a TRAA member, it also includes everyone in your immediate family!</p>
 						<p>The best way to join up is to attend a TRAA event or email us for other options.</p>
-			</div>
+				</div>
 		</div>
 	</div>
 </div>
 
 	<div class="divider"></div>
 
-
 	<div id="fundraiser">
-			<div class="title">
-				<h2>FUNDRAISING</h2>
-			</div>
+				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+
 
 	<div class="divider"></div>
 
@@ -167,7 +174,7 @@
 		</div>
 
 		<div id="mobileFoot">
-			<button>Return to Top</button>
+			<button id="return">Return to Top</button>
 		</div>
 	</div>
 
