--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 <div id="siteContainer">
@@ -62,21 +63,26 @@
 
 	<div class="divider"></div>
 
+<div class="extraSpace">
 	<div id="fundraiser">
 				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+</div>	
 
-	<div class="divider"></div>
+<div class="divider"></div>
 	
 
 			<div id="announcements">
@@ -173,35 +179,50 @@
 			<div class="businessText"><h3>The support of the following area business people is much appreciated</h3></div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus1.png" alt="Melchers logo"></div>
+				<div class="businessesImg">
+					<img src="images/bus1.png" alt="Melchers logo" class="web">
+					<img src="images/bus1mob.png" alt="Melchers logo" class="mobileImg">
+				</div>
 				<div class="businessText">
 					<p>Over the past couple of years the folks at Melchers Construction Ltd have offered up their beautiful boardroom for TRAA executive meetings. It's an ideal space with all the amenities required for us to accomplish all the "behind the scenes" work of the TRAA. Many thanks go out to the continued support of Melchers Construction Ltd.</p>
 				</div>
 			</div>
 
 				<div class="businesses">
-				<div class="businessesImg"><img src="images/bus2.png" alt="Guillevin Greentech logo"></div>
+				<div class="businessesImg">
+					<img src="images/bus2.png" alt="Guillevin Greentech logo" class="web">
+					<img src="images/bus2mob.png" alt="Melchers logo" class="mobileImg">
+				</div>
 				<div class="businessText">
 					<p>Members of the trout hatchery rotation know the woes we've had with lighting in the hatchery. Even with larger fixtures installed a few years ago, it was still frustrating on days when the mercury dipped below -15C and the fluorescent technology just teased us with its dull flicker. Enter Mike Jeffries of Guillevin Greentech in London with nice set of bright and dependable (and new!) LED fixtures. Once they were installed it was like working in well-appointed laboratory.</p>
 				</div>
 			</div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus3.png" alt="Muma Manufacturing logo"></div>
+				<div class="businessesImg">
+					<img src="images/bus3.png" alt="Muma Manufacturing logo" class="web">
+					<img src="images/bus3mob.png" alt="Melchers logo" class="mobileImg">
+				</div>
 				<div class="businessText">
 					<p>The TRAA voted unanimously to re-name the TRAA trout hatchery honouring Keith Wales' memory and his unselfish support of the TRAA's work in the London area, in particular Komoka Creek. Special thanks go out to Muma Manufacturing in St. Thomas for donating the beautiful laser-cut aluminum sign.</p>
 				</div>
 			</div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus4.png" alt="Try Recycling Logo"></div>
+				<div class="businessesImg">
+					<img src="images/bus4.png" alt="Try Recycling Logo" class="web">
+					<img src="images/bus4mob.png" alt="Melchers logo" class="mobileImg">
+				</div>
 				<div class="businessText">
 					<p>After cleaning up the area around the TRAA shed and trout hatchery, our trailer was quite full and needed to be emptied. A big 'thank you' goes out to Rick Vandersluis and Mike Seabrook of Try Recycling who allowed the TRAA to empty the trailer at their facility free of charge.</p>
 				</div>
 			</div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus5.png" alt="Angling Sports Logo"></div>
+				<div class="businessesImg">
+					<img src="images/bus5.png" alt="Angling Sports Logo" class="web">
+					<img src="images/bus5mob.png" alt="Melchers logo" class="mobileImg">
+				</div>
 				<div class="businessText">
 					<p>Before we could take the trailer to Try Recycling, we needed to get the spare tire for the trailer fixed. Pat Devincenzo, proprietor of Angling Sports, offered to get it repaired. Turns out the tire needed replacing and Pat took care of it.
 					Angling Sports also supplied cards for all TRAA members that entitle them to a discount equal to the tax on anything in the store.
@@ -288,7 +309,7 @@
 		</div>
 
 		<div id="mobileFoot">
-			<button>Return to Top</button>
+			<button id="return">Return to Top</button>
 		</div>
 	</div>
 
