tablet responsiveness almost finished

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 				<label for="message">Message</label>
 				<input type="text" id="message" name="message" placeholder="Enter your message..">
 
-				<input type="submit" name="submit">
+				<input type="submit" name="submit" class="submit">
 			</form>	
 		</div>
 	</div>
@@ -101,7 +101,7 @@
 			<p>The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road.</p> 
 			<p>The address is 790 Southdale Road East, London, Ontario.</p>
 			<p>Note: Every now and then we have "off-site" meetings. For example, the July and August meetings are "fishing meetings" so we won't be at WOFGPA clubhouse. Stay on top of these changes by visiting this Web site often.</p>
-			<p>TRAA SnailMail Send all those cards and letters (and cheques!) to:
+			<p>TRAA SnailMail! Send all those cards and letters (and cheques!) to:
 				Thames River Anglers Association
 				2202 Coronation Drive
 				London, Ontario
@@ -138,25 +138,37 @@
 
 	<div class="divider"></div>
 
+<div class="extraSpace">
 	<div id="fundraiser">
 				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
+				<div class="fundraiserImg img1 web"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+
+				<div class="fundraiserImg img1 mobileImg"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+
+				<div class="fundraiserImg img1 tabImg"><a href="projTem.html"><img src="images/fund1tab.png" alt="Trout Hatchery" class="tabImg"></a></div>
+
+				<div class="fundraiserImg img2 web"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+
+				<div class="fundraiserImg img2 mobileImg"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+
+				<div class="fundraiserImg img2 tabImg"><a href="projTem.html"><img src="images/fund2tab.png" alt="Salmonid Monitoring" class="tabImg"></a></div>
+
+				<div class="fundraiserImg img3 web"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+
+				<div class="fundraiserImg img3 mobileImg"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
+
+				<div class="fundraiserImg img3 tabImg"><a href="projTem.html"><img src="images/fund3tab.png" alt="Komoka Hydrological" class="tabImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+</div>
 
-
-	<div class="divider"></div>
+<div class="divider mobileImg"></div>
 
 		<div id="footer">
 		<div id="footerNav">
@@ -168,7 +180,7 @@
 				<li><a href="contact.html">Contact Us</a></li>
 				<li><a href="more.html">More</a></li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
-				<li><form><input type="search" placeholder="Search..."></form></li>
+				<li><form><input type="search" placeholder="Search..." class="search"></form></li>
 				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
