--- a/more.html
+++ b/more.html
@@ -186,7 +186,7 @@
 <div class="divider"></div>
 
 		<div class="extraSpace">
-			<div id="membershipText"><h2 class="title">MEMBERSHIPS
+			<div id="membershipText"><h2 class="title memberTitle">MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
 			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
@@ -197,24 +197,37 @@
 
 <div class="divider"></div>
 
-<div id="fundraiser">
+<div class="extraSpace">
+	<div id="fundraiser">
 				<h2 class="funTitle">FUNDRAISING</h2>
 		<div  id="fundraiserText"><h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
-				<div class="fundraiserImg img1"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
-				<div class="fundraiserImg img2"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
-				<div class="fundraiserImg img3"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
+				<div class="fundraiserImg img1 web"><a href="projTem.html"><img src="images/fund1.png" alt="Trout Hatchery" class="web"></a></div>
+
+				<div class="fundraiserImg img1 mobileImg"><a href="projTem.html"><img src="images/fund1mob.png" alt="Trout Hatchery" class="mobileImg"></a></div>
+
+				<div class="fundraiserImg img1 tabImg"><a href="projTem.html"><img src="images/fund1tab.png" alt="Trout Hatchery" class="tabImg"></a></div>
+
+				<div class="fundraiserImg img2 web"><a href="projTem.html"><img src="images/fund2.png" alt="Salmonid Monitoring" class="web"></a></div>
+
+				<div class="fundraiserImg img2 mobileImg"><a href="projTem.html"><img src="images/fund2mob.png" alt="Salmonid Monitoring" class="mobileImg"></a></div>
+
+				<div class="fundraiserImg img2 tabImg"><a href="projTem.html"><img src="images/fund2tab.png" alt="Salmonid Monitoring" class="tabImg"></a></div>
+
+				<div class="fundraiserImg img3 web"><a href="projTem.html"><img src="images/fund3.png" alt="Komoka Hydrological" class="web"></a></div>
+
+				<div class="fundraiserImg img3 mobileImg"><a href="projTem.html"><img src="images/fund3mob.png" alt="Komoka Hydrological" class="mobileImg"></a></div>
+
+				<div class="fundraiserImg img3 tabImg"><a href="projTem.html"><img src="images/fund3tab.png" alt="Komoka Hydrological" class="tabImg"></a></div>
 			</div>
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p>
 				<p>Continuation of the Salmonid Monitoring Program</p>
 				<p>Funding the Komoka Creek Hydrological Study</p></div>
 			<div id="fundraiserText2"><p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+</div>
 	
-	<div class="divider"></div>
+	<div class="divider mobileImg"></div>
 	
 	<div id="footer">
 		<div id="footerNav">
@@ -226,7 +239,7 @@
 				<li><a href="contact.html">Contact Us</a></li>
 				<li><a href="more.html">More</a></li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
-				<li><form><input type="search" placeholder="Search..."></form></li>
+				<li><form><input type="search" placeholder="Search..." class="search"></form></li>
 				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
